# truthound

./: .gitignore  LICENSE  README.en.md  README.md  mkdocs.public.yml  mkdocs.yml  netlify.toml  pyproject.toml  schema.yaml  truthound.yaml
.github/: INTEGRATION_TEST_SETUP.md
.github/workflows/: ai-live-smoke.yml  benchmarks-nightly.yml  benchmarks-pr.yml  benchmarks-release.yml  docs.yml  integration-tests.yml  release-pypi.yml  tests-nightly.yml  tests-pr.yml
benchmarks/constraints/: release.txt
benchmarks/workloads/: duckdb-null.json  duckdb-range.json  duckdb-unique.json  local-mixed-core-suite.json  local-null.json  local-range.json  local-schema.json  local-unique.json  sqlite-null.json  sqlite-range.json  sqlite-unique.json
docs/: ADVANCED.md  API_REFERENCE.md  ARCHITECTURE.md  CHECKPOINT.md  DATADOCS.md  DATASOURCES.md  DATASOURCES_ARCHITECTURE.md  EXAMPLES.md  GETTING_STARTED.md  PERFORMANCE.md  PLUGINS.md  PROFILER.md  STATISTICAL_METHODS.md  STORES.md  TEST_COVERAGE.md  VALIDATORS.md  _redirects  index.md  public_docs.yml
docs/adr/: 001-validation-kernel.md  002-plugin-platform.md  003-result-model.md  004-migration-compatibility.md
docs/ai/: approval-apply.md  artifact-schema.md  index.md  privacy-redaction.md  prompt-hardening.md  proposal-compiler.md  provider-contract.md  release-gate.md  run-analysis-evidence.md  system-boundary.md
docs/api-reference/: index.md
docs/cli/: dashboard.md  index.md
docs/concepts/: API_REFERENCE.md  DATASOURCES.md  EXAMPLES.md  VALIDATORS.md  advanced.md  architecture.md  datasources-architecture.md  depot-engine-primitives.md  index.md  masking.md  openlineage.md  plugins.md  statistical-methods.md  test-coverage.md  zero-config.md
docs/dashboard/: index.md
docs/getting-started/: first-validation.md  index.md  installation.md  quickstart.md
docs/guides/: benchmark-methodology.md  benchmark-workloads.md  checkpoints.md  ci-cd.md  cicd.md  configuration.md  data-masking.md  datadocs.md  datasources.md  docs-deployment-verification.md  gx-parity.md  html-reports.md  index.md  migration-2.0.md  migration-3.0.md  ml-monitoring.md  notifications.md  performance.md  privacy.md  profiler.md  quality-reporter.md  reporter-sdk.md  reporters.md  statistical-methods.md  stores.md  validators.md
docs/javascripts/: language-redirect.js  theme-toggle.js
docs/legacy/: index.md
docs/orchestration/: .gitkeep  depot-pipelines.md  index.md  releasing.md  testing-ci-ownership.md
docs/python-api/: advanced.md  core-functions.md  datasources.md  index.md  reporters.md  schema.md  validators.md
docs/reference/: index.md
docs/releases/: latest-benchmark-summary.md  truthound-2.0.md  truthound-3.0-rc1.md  truthound-3.0.md  truthound-3.1.1.md  truthound-3.1.2.md  truthound-3.1.3.md  truthound-3.1.5.md  truthound-3.1.6.md  truthound-3.1.7.md  truthound-3.1.md
docs/scripts/: build_site.sh  check_links.py  external_docs.py  fetch_external_docs.py  gen_cli_docs.py  gen_ref_pages.py  generate_korean_locale.py  prepare_public_docs.py  public_manifest.py  publish_benchmark_summary.py  sync_external_docs.py  verify_korean_docs.py  verify_public_surface.py
docs/stylesheets/: extra.css
docs/tutorials/: custom-validator.md  data-profiling.md  enterprise-setup.md  examples.md  first-validation.md  index.md
docs/user-guide/: cli-reference.md  index.md
scripts/: fetch-external-docs.sh  fetch-orchestration-docs.sh
src/truthound/: __init__.py  _ai_contract.py  _ai_redaction.py  _ai_support.py  _applied_suite.py  _json_document.py  _lazy.py  _redaction.py  _version.py  adapters.py  api.py  cache.py  cli.py  context.py  decorators.py  html_report.py  html_reporter.py  maskers.py  profiler.py  report.py  scanners.py  schema.py  types.py
tests/: __init__.py  ai_prompt_evaluation.py  conftest.py  test_100m_scale.py  test_adapters.py  test_ai_dsl_coverage.py  test_ai_import_contract.py  test_ai_korean_prompt_normalization.py  test_ai_phase0.py  test_ai_phase1.py  test_ai_phase2.py  test_ai_phase22.py  test_ai_phase4_hardening.py  test_ai_prompt_evaluation_acceptance.py  test_ai_prompt_lexicon.py  test_ai_prompt_observability.py  test_ai_smoke.py  test_api.py  test_async_checkpoint.py  test_audit.py  test_backend_conformance.py  test_benchmark.py  test_benchmark_gx_conformance.py  test_benchmark_parity.py  test_benchmark_publish_summary.py  test_cache.py  test_checkpoint.py  test_ci_quality_helpers.py  test_ci_reporters.py  test_circuitbreaker.py  test_core_architecture.py  test_core_redesign.py  test_dag_dependencies.py  test_datasources.py  test_datasources_duckdb.py  test_datasources_enterprise.py  test_datasources_sql.py  test_depot_artifact_bundles.py  test_depot_compatibility_gate.py  test_depot_contract_bootstrap.py  (+76 more)
tests/cli_modules/: test_benchmark_parity_cli.py  test_check_options.py  test_datasource_commands.py  test_datasource_resolution.py  test_plugins_cli.py  test_quality_cli.py  test_read_command.py
tests/contracts/: test_dashboard_runtime_contract.py
tests/datadocs/: __init__.py  test_base.py  test_builder.py  test_charts.py  test_failure_modes.py  test_sections.py  test_styles.py  test_themes.py
tests/e2e/: __init__.py  fixtures.py  test_core_paths.py  utils.py
tests/integration/: __init__.py  conftest.py
tests/lineage/: __init__.py  test_lineage_module.py
tests/ml/: __init__.py  test_ml_module.py
tests/mocks/: __init__.py  cloud_mocks.py  database_mocks.py  reporter_mocks.py
tests/phase6_verification/: test_01_saga_pattern.py  test_02_notification_providers.py  test_03_async_execution.py  test_04_circuit_breaker.py  test_05_idempotency.py  test_07_distributed_checkpoint.py  test_08_github_oidc.py  test_09_job_queue_monitoring.py
tests/plugins/: __init__.py  test_hooks.py  test_plugin_base.py  test_plugin_manager.py  test_registry.py
tests/profiler/: test_enterprise_sampling.py  test_parallel_sampling.py  test_sketches.py
tests/realtime/: __init__.py  test_realtime_module.py
tests/stores/: test_connection_pool.py
tests/stress/: __init__.py  chaos.py  framework.py  generators.py  metrics.py  (+2 more)
(+1759 files in other folders)
