[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truthound"
version = "0.2.0"
description = "Zero-configuration data quality toolkit powered by Polars"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "seadonggyun4", email = "seadonggyun4@gmail.com" }
]
keywords = [
    "data-quality",
    "data-validation",
    "polars",
    "pii-detection",
    "data-masking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
reports = [
    "jinja2>=3.0.0",
]
drift = [
    "scipy>=1.10.0",
]
anomaly = [
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]
all = [
    "jinja2>=3.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
truthound = "truthound.cli:app"

[project.urls]
Homepage = "https://github.com/seadonggyun4/Truthound"
Repository = "https://github.com/seadonggyun4/Truthound"
Issues = "https://github.com/seadonggyun4/Truthound/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/truthound"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas>=2.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=truthound --cov-report=term-missing {args:tests}"
lint = "ruff check src tests"
format = "ruff format src tests"
typecheck = "mypy src"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["truthound"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
