[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truthound"
version = "1.2.11"
description = "Zero-Configuration Data Quality Framework Powered by Polars"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "seadonggyun4", email = "seadonggyun4@gmail.com" }
]
keywords = [
    "data-quality",
    "data-validation",
    "polars",
    "pii-detection",
    "data-masking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
# Report generation
reports = [
    "jinja2>=3.0.0",
]

# Statistical drift detection
drift = [
    "scipy>=1.10.0",
]

# Anomaly detection with ML
anomaly = [
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]

# Cloud storage backends
s3 = [
    "boto3>=1.26.0",
]
gcs = [
    "google-cloud-storage>=2.0.0",
]
azure = [
    "azure-storage-blob>=12.0.0",
]

# Database storage backend
database = [
    "sqlalchemy>=2.0.0",
]

# All storage backends
stores = [
    "boto3>=1.26.0",
    "google-cloud-storage>=2.0.0",
    "azure-storage-blob>=12.0.0",
    "sqlalchemy>=2.0.0",
]

# DuckDB database
duckdb = [
    "duckdb>=1.0.0",
]

# NoSQL databases
mongodb = [
    "motor>=3.0.0",
]
elasticsearch = [
    "elasticsearch[async]>=8.0.0",
]
nosql = [
    "motor>=3.0.0",
    "elasticsearch[async]>=8.0.0",
]

# Streaming platforms
kafka = [
    "aiokafka>=0.9.0",
]
streaming = [
    "aiokafka>=0.9.0",
]

# All async datasources
async-datasources = [
    "motor>=3.0.0",
    "elasticsearch[async]>=8.0.0",
    "aiokafka>=0.9.0",
]

# Interactive dashboard (Phase 8)
dashboard = [
    "reflex>=0.4.0",
]

# PDF export support
pdf = [
    "weasyprint>=60.0",
]

# Performance optimization
perf = [
    "xxhash>=3.4.0",
]

# Full installation with all optional dependencies
all = [
    "jinja2>=3.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "boto3>=1.26.0",
    "google-cloud-storage>=2.0.0",
    "azure-storage-blob>=12.0.0",
    "sqlalchemy>=2.0.0",
    "duckdb>=1.0.0",
    "reflex>=0.4.0",
    "weasyprint>=60.0",
    "motor>=3.0.0",
    "elasticsearch[async]>=8.0.0",
    "aiokafka>=0.9.0",
    "xxhash>=3.4.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
truthound = "truthound.cli:app"

[project.urls]
Homepage = "https://github.com/seadonggyun4/Truthound"
Repository = "https://github.com/seadonggyun4/Truthound"
Issues = "https://github.com/seadonggyun4/Truthound/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/truthound"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas>=2.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=truthound --cov-report=term-missing {args:tests}"
lint = "ruff check src tests"
format = "ruff format src tests"
typecheck = "mypy src"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["truthound"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as end-to-end tests",
    "scale_100m: marks tests as 100M+ scale tests (run with '-m scale_100m')",
]
